test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_ioerror_expr_no_args.draco
proc main() void : a := ioerror(); corp;

