test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_downto_as_identifier.draco
int downto;
 
proc main() void : a := 1; corp;
